# libdbusmenu

./: .bzrignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
.bzr-builddeb/: default.conf
debian/: changelog  control  copyright  gir1.0-dbusmenu-glib-0.2.install  gir1.0-dbusmenu-gtk-0.2.install  gir1.0-dbusmenu-gtk3-0.2.install  gir1.2-dbusmenu-glib-0.4.install  gir1.2-dbusmenu-gtk-0.2.install  gir1.2-dbusmenu-gtk-0.4.install  gir1.2-dbusmenu-gtk3-0.2.install  gir1.2-dbusmenu-gtk3-0.4.install  libdbusmenu-glib-dev.install  libdbusmenu-glib-doc.install  libdbusmenu-glib0.install  libdbusmenu-glib4.install  libdbusmenu-glib4.symbols  libdbusmenu-gtk-dev.install  libdbusmenu-gtk-doc.install  libdbusmenu-gtk3-2.install  libdbusmenu-gtk3-3.symbols  libdbusmenu-gtk3-4.install  libdbusmenu-gtk3-4.symbols  libdbusmenu-gtk3-dev.install  libdbusmenu-gtk4.install  libdbusmenu-gtk4.symbols  libdbusmenu-jsonloader-dev.install  libdbusmenu-jsonloader1.install  libdbusmenu-jsonloader4.install  libdbusmenu-tools.install  rules  watch
debian/patches/: bluetooth-applet-fix.patch  disconnect-more-signals.patch  fix-defaults-in-client.patch  lp726678.patch  lp799878.patch  series
docs/: Makefile.am  Makefile.in
docs/libdbusmenu-glib/: Makefile.in
docs/libdbusmenu-glib/reference/: Makefile.am  Makefile.in  libdbusmenu-glib-docs.sgml  libdbusmenu-glib-sections.txt  libdbusmenu-glib.types
docs/libdbusmenu-glib/reference/html/: DbusmenuClientMenuitem.html  DbusmenuMenuitem.html  DbusmenuMenuitemProxy.html  annotation-glossary.html  api-index-deprecated.html  api-index-full.html  ch01.html  index.html  index.sgml  libdbusmenu-glib-DbusmenuClient.html  libdbusmenu-glib-DbusmenuClientMenuitem.html  libdbusmenu-glib-DbusmenuMenuitem.html  libdbusmenu-glib-DbusmenuMenuitemProxy.html  libdbusmenu-glib-DbusmenuServer.html  libdbusmenu-glib-Types.html  libdbusmenu-glib-dbusmenu-client.html  libdbusmenu-glib-dbusmenu-server.html  libdbusmenu-glib.devhelp  libdbusmenu-glib.devhelp2  object-tree.html
docs/libdbusmenu-glib/reference/tmpl/: client-menuitem.sgml  client.sgml  dbusmenu-client.sgml  dbusmenu-server.sgml  menuitem-proxy.sgml  menuitem.sgml  server.sgml  types.sgml
docs/libdbusmenu-glib/reference/xml/: annotation-glossary.xml  api-index-full.xml  client-menuitem.xml  client.xml  dbusmenu-client.xml  dbusmenu-server.xml  menuitem-proxy.xml  menuitem.xml  server.xml  types.xml
docs/libdbusmenu-gtk/: Makefile.in
docs/libdbusmenu-gtk/reference/: Makefile.am  Makefile.in  libdbusmenu-gtk-docs.sgml  libdbusmenu-gtk-sections.txt  libdbusmenu-gtk.types
docs/libdbusmenu-gtk/reference/html/: Genericmenuitem.html  annotation-glossary.html  api-index-deprecated.html  api-index-full.html  ch01.html  index.html  index.sgml  libdbusmenu-gtk-DbusmenuGtkClient.html  libdbusmenu-gtk-DbusmenuGtkMenu.html  libdbusmenu-gtk-menuitem.html  libdbusmenu-gtk-parser.html  libdbusmenu-gtk.devhelp  libdbusmenu-gtk.devhelp2  object-tree.html
docs/libdbusmenu-gtk/reference/tmpl/: client.sgml  genericmenuitem.sgml  libdbusmenu-gtk-unused.sgml  menu.sgml  menuitem.sgml  parser.sgml  serializablemenuitem.sgml
docs/libdbusmenu-gtk/reference/xml/: annotation-glossary.xml  api-index-full.xml  client.xml  genericmenuitem.xml  menu.xml  menuitem.xml  parser.xml  serializablemenuitem.xml
libdbusmenu-glib/: Doxyfile  Makefile.am  Makefile.in  clean-namespaces.xslt  client-marshal.c  client-marshal.h  client-marshal.list  client-menuitem.c  client-menuitem.h  client-private.h  client.c  client.h  dbus-menu-clean.xml  dbus-menu-clean.xml.c  dbus-menu.xml  dbusmenu-client.h  dbusmenu-glib-0.4.pc.in  dbusmenu-glib.pc.in  dbusmenu-server.h  defaults.c  defaults.h  enum-types.c  enum-types.c.in  enum-types.h  enum-types.h.in  menuitem-marshal.c  menuitem-marshal.h  menuitem-marshal.list  menuitem-private.h  menuitem-proxy.c  menuitem-proxy.h  menuitem.c  menuitem.h  server-marshal.c  server-marshal.h  server-marshal.list  server.c  server.h  test.h  types.h
libdbusmenu-gtk/: Makefile.am  Makefile.in  client.c  client.h  dbusmenu-gtk-0.4.pc.in  dbusmenu-gtk.h  dbusmenu-gtk.pc.in  dbusmenu-gtk3-0.4.pc.in  dbusmenu-gtk3.pc.in  genericmenuitem-enum-types.h  genericmenuitem.c  genericmenuitem.h  menu.c  menu.h  menuitem.c  menuitem.h  parser.c  parser.h  serializablemenuitem.c  serializablemenuitem.h  test.c
libdbusmenu-qt/: Makefile.am  dbusmenu-qt.pc.in
po/: POTFILES.in
tests/: Makefile.am  Makefile.in  dbusmenu-jsonloader-0.4.pc.in  dbusmenu-jsonloader.pc.in  glib-server-nomenu.c  json-loader.c  json-loader.h  run-xvfb.sh  test-glib-events-client.c  test-glib-events-nogroup-client.c  test-glib-events-server.c  test-glib-layout-client.c  test-glib-layout-server.c  test-glib-layout.h  test-glib-objects.c  test-glib-properties-client.c  test-glib-properties-server.c  test-glib-properties.h  test-glib-proxy-client.c  test-glib-proxy-proxy.c  test-glib-proxy-server.c  test-glib-proxy.h  test-glib-simple-items.c  test-glib-submenu-client.c  test-glib-submenu-server.c  test-gtk-label-client.c  test-gtk-label-server.c  test-gtk-label.h  test-gtk-label.json  test-gtk-objects.c  test-gtk-parser.c  test-gtk-reorder-server.c  test-gtk-shortcut-client.c  test-gtk-shortcut-server.c  test-gtk-submenu-client.c  test-gtk-submenu-server.c  test-json-01.json  test-json-client.c  test-json-server.c  test.sh
tests/dbusmenu-gtk/: Makefile.am  dbusMenuTest  dbusmenu.py  dbusmenu.py.in  dbusmenu.xml  dbusmenu.xml.in
tools/: Makefile.am  Makefile.in  README.dbusmenu-bench  dbusmenu-bench  dbusmenu-dumper.c  dbusmenubench.py
tools/testapp/: CMakeLists.txt  Makefile.am  Makefile.in  main.c
